@@ -5,7 +5,8 @@ Changes log
 
 - @version-full@ (@release-date@)
     - Bugs fixed
-       - 
+       - RDF/XML writing wasn't properly factoring statements from the same
+         source reference.
     
     - 2.0.9 (2011-08-20)
     - Bugs fixed
